Add productos/search endpoint to filter products
