# domain/src/main/java/com/miguelluque/apifirst/openapi/openapi.yml
@@ -80,6 +80,56 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorDTO'
 
+  /productos/search:
+    get:
+      tags:
+        - productos
+      summary: Buscar productos con filtros dinámicos
+      operationId: searchProductos
+      parameters:
+        - in: query
+          name: nombre
+          schema:
+            type: string
+          description: Filtro por nombre del producto
+        - in: query
+          name: descripcion
+          schema:
+            type: string
+          description: Filtro por descripción del producto
+        - in: query
+          name: precioMin
+          schema:
+            type: number
+            format: double
+          description: Filtro por precio mínimo
+        - in: query
+          name: precioMax
+          schema:
+            type: number
+            format: double
+          description: Filtro por precio máximo
+        - in: query
+          name: page
+          schema:
+            type: integer
+            default: 0
+            minimum: 0
+          description: Número de página que se desea consultar
+        - in: query
+          name: size
+          schema:
+            type: integer
+            default: 10
+            minimum: 1
+          description: Número de productos a listar por página
+      responses:
+        200:
+          description: Una lista de productos
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PaginatedProductResponse'
   /productos:
     get:
       tags:
@@ -91,13 +141,15 @@ paths:
           name: page
           schema:
             type: integer
-            default: 1
+            default: 0
+            minimum: 0
           description: Número de página que se desea consultar
         - in: query
           name: size
           schema:
             type: integer
             default: 10
+            minimum: 1
           description: Número de productos a listar por página
       responses:
         200:
@@ -259,7 +311,6 @@ paths:
 
 components:
   schemas:
-
     PaginatedProductResponse:
       type: object
       properties:
@@ -342,6 +393,7 @@ components:
           description: Nombre del producto
           minLength: 3
           pattern: "(\\S.*?){3,}"
+          example: "Rueda de repuesto"
         descripcion:
           type: string
           description: Descripción del producto
@@ -363,4 +415,3 @@ components:
           description: Precio del producto
           minimum: 0
           example: 999.99
-
